--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 # Created by https://www.gitignore.io/api/macos,swift,python,windows,microsoftoffice
 # Edit at https://www.gitignore.io/?templates=macos,swift,python,windows,microsoftoffice
 
+# important files for pcap 
+*.pcap
+*.key
+
+
+
 ### macOS ###
 # General
 .DS_Store
